2003-01-05  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (setup_dialog), (main):
	* Makefile.am:
	* theme-thumbnailing.png:

	Add a default image for when theme's are being
	thumbnailed.
	
	* theme-properties.glade:

	Hide dialog by default so it doesn't come
	up undrawn.
	
2003-01-05  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (add_custom_row_to_meta_theme),
	(remove_custom_row_from_meta_theme):
	* theme-thumbnail.c: (theme_thumbnail_invalidate_cache):
	* theme-thumbnail.h:
	
	Generate thumbnails for the custom theme.

Thu Jan  2 08:57:54 2003  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c: correctly merge disk updates and the
	current setup.

	* TODO: Add a TODO

2002-12-31  Seth Nickell  <snickell@stanford.edu>

	* theme-thumbnail.c: (create_image):

	Change the order of priority between folder icon names,
	since gnome-fs-directory is in the backup theme and will
	otherwise take precedence. This fix is a hack.

2002-12-31  Seth Nickell  <snickell@stanford.edu>

	* theme-thumbnail.c: (create_image):

	Thumbnail for themes (most currently) that use
	"gnome-fs-directory" as the icon name for folders rather
	than "folder".

2002-12-30  Jody Goldberg <jody@gnome.org>

	Apply
	http://bugzilla.gnome.org/show_bug.cgi?id=101752

	* gnome-theme-details.c : Merge in Frederic's patch.
	* gnome-theme-details.c : ditto.

2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-details.c: (path_to_theme_id), (load_theme_names),
	(gnome_theme_details_reread_themes_from_disk):

	Use the theme directory name rather than the "printable" name
	for icon themes. Does this need to be done for WM themes and
	GTK themes as well?
	
2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (update_themes_from_disk):

	Fix crash when current WM isn't detected.

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

Fri Dec  6 16:54:14 2002  Jonathan Blandford  <jrb@redhat.com>
